// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-component when called in an existing project when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

  Happy coding!

  Further reading:
    https://docs.coveo.com/en/atomic/latest/cc-search/create-custom-components
  
"
`;

exports[`@coveo/create-atomic-component when called in an existing project when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "kJH2XVWhWdnme3CtyxJ2Wx94p90=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "CSzlp6SzDDKYsFtDpjr8ZDAjDFk=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ewQGf3/bnIIj+Rv249cv7K7YGsg=",
                      "name": "stencil-docs.d.ts",
                    },
                  ],
                  "hash": "OzYoobNX1XCpcFrvvtsD00f4Rwg=",
                  "name": "docs",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "BHkYREiqjkQizanFWrHUH+O5/HI=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sWhaIzdNtSJjLJC7gUXMjbEJdx0=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "ntHGYg9QKoQZ2SOSozmyw8U7mA0=",
                  "name": "package.json",
                },
                HashedFile {
                  "hash": "Y7o7qqEMtNPDee+BO6HqyUddkOM=",
                  "name": "readme.md",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "qJnWpbM0djxX/iTkEr7sFyWoEKE=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "thNuR19mCXpaJkWVaPRL3/e7Nz0=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "5otG7jfu2k0pgrG60UXIp9o/aKw=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                  ],
                  "hash": "8GUfKrr/zLo7sJqbjfM8jwZV+AQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "VUPPStYRtDhau2kFjUISz5YvHSE=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "oXD5sylRXFuWCDSY/5wtRmTZaqY=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "UqG2l+4ZhOop/Ft17tGbU6YOozU=",
          "name": "components",
        },
        HashedFile {
          "hash": "hDda5gtN4YPLmASHFgAZanGhSmY=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "zJQKmqArKzOvjuA1F/O2Cg38reo=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "WBXXl7Em83GskL/B10/zRrjjpII=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "r23wwW5wvO+H6ZGKVG5DjhD0mTo=",
              "name": "index.ts",
            },
          ],
          "hash": "tdtcK13ysg5WEMg91GUjcUhY+kw=",
          "name": "pages",
        },
      ],
      "hash": "jDzqZGKzXi5DFKcmPFJ13vRFGfQ=",
      "name": "src",
    },
    HashedFile {
      "hash": "pmsUQcrl+uttNjhQm9SN6CoAvrg=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "StJr9IDP8r+G9N+gaMbe/QIA6lU=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-component when called with a valid component name when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

  Happy coding!

  Further reading:
    https://docs.coveo.com/en/atomic/latest/cc-search/create-custom-components
  
"
`;

exports[`@coveo/create-atomic-component when called with a valid component name when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "kJH2XVWhWdnme3CtyxJ2Wx94p90=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "CSzlp6SzDDKYsFtDpjr8ZDAjDFk=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "EdmC9lKxNU7gTzof6/db3EfuNnc=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "thNuR19mCXpaJkWVaPRL3/e7Nz0=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "fHJqjVeUFQ1E6bdNO7ZYW4TemEQ=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "/Pc/+ZHqftkw24LLCw6wNDYRr34=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "VUPPStYRtDhau2kFjUISz5YvHSE=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "M9AnFTccQtVQ5ZJQsA7uF9yrbv0=",
              "name": "valid-component-name",
            },
          ],
          "hash": "YuF9TSMljxSIx62fdsvg08/K6GI=",
          "name": "components",
        },
        HashedFile {
          "hash": "hDda5gtN4YPLmASHFgAZanGhSmY=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "zJQKmqArKzOvjuA1F/O2Cg38reo=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "WBXXl7Em83GskL/B10/zRrjjpII=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "r23wwW5wvO+H6ZGKVG5DjhD0mTo=",
              "name": "index.ts",
            },
          ],
          "hash": "tdtcK13ysg5WEMg91GUjcUhY+kw=",
          "name": "pages",
        },
      ],
      "hash": "AEBak337c8vSe0dsWY/2GmgYOio=",
      "name": "src",
    },
    HashedFile {
      "hash": "pmsUQcrl+uttNjhQm9SN6CoAvrg=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "jXjUnTLjmR0BLPp7B5hOdRIcjWE=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-component when called without any args when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

  Happy coding!

  Further reading:
    https://docs.coveo.com/en/atomic/latest/cc-search/create-custom-components
  
"
`;

exports[`@coveo/create-atomic-component when called without any args when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "kJH2XVWhWdnme3CtyxJ2Wx94p90=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "CSzlp6SzDDKYsFtDpjr8ZDAjDFk=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "JM8ajR+CUpWlSnrtS9IS+8xbtrA=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "thNuR19mCXpaJkWVaPRL3/e7Nz0=",
                      "name": "sample-component.css",
                    },
                    HashedFile {
                      "hash": "K1Ia/wNiWlt9Dro1Erq4ya6KZ1k=",
                      "name": "sample-component.tsx",
                    },
                  ],
                  "hash": "N+/pjI5NrPao4IEAzUCC/9/9/jU=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "VUPPStYRtDhau2kFjUISz5YvHSE=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "bdt8AKJh0tkMbmUWbYVKBYM1qms=",
              "name": "sample-component",
            },
          ],
          "hash": "Wd6lPtMsdzKdz73sSelwtDZv7vQ=",
          "name": "components",
        },
        HashedFile {
          "hash": "hDda5gtN4YPLmASHFgAZanGhSmY=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "zJQKmqArKzOvjuA1F/O2Cg38reo=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "WBXXl7Em83GskL/B10/zRrjjpII=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "r23wwW5wvO+H6ZGKVG5DjhD0mTo=",
              "name": "index.ts",
            },
          ],
          "hash": "tdtcK13ysg5WEMg91GUjcUhY+kw=",
          "name": "pages",
        },
      ],
      "hash": "tKay7x4Xy4dlGO5+uS5Szm+OJd8=",
      "name": "src",
    },
    HashedFile {
      "hash": "pmsUQcrl+uttNjhQm9SN6CoAvrg=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "8lx5n92NEqq+hcOfMEapb8anPV8=",
  "name": "no-args",
}
`;
